<resources>
    <string name="app_name">Smack Chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_create">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="smackchat">smackchat</string>
    <string name="smack_chat">Smack Chat</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password_create">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="error_toast">Something went wrong, please try again</string>
    <string name="error_fields_empty_toast">Make sure username, email and password are filled in</string>
    <string name="logout">Logout</string>
    <string name="email_logged">juansandoval222@gmail.com</string>
    <string name="name_logged">Juan Sandoval</string>
    <string name="log_out">Loggin out</string>
</resources>
